--- a/app/views/paper/index.html.erb
+++ b/app/views/paper/index.html.erb
@@ -46,9 +46,9 @@
       <div class="col s12 m4">
         <div class="icon-block center">
           <div class="orange-text"><i class="material-icons large">face</i></div>
-          <h3 class="h6-size"><%= t('marketing.landing_page.benefits.characters.title') %></h3>
+          <h3 class="h6-size">Deeper characters</h3>
           <p class="light">
-            <%= t('marketing.landing_page.benefits.characters.text') %>
+            Get to know your characters. Track every detail of their thoughts, appearance, family, and personality.
           </p>
         </div>
       </div>
@@ -56,9 +56,9 @@
       <div class="col s12 m4">
         <div class="icon-block center">
           <div class="orange-text"><i class="material-icons large">public</i></div>
-          <h3 class="h6-size"><%= t('marketing.landing_page.benefits.locations.title') %></h3>
+          <h3 class="h6-size">Richer worlds</h3>
           <p class="light">
-            <%= t('marketing.landing_page.benefits.locations.text') %>
+            Immerse yourself in vibrant worlds with specialized notebook pages for your countries, cities, landmarks, and more.
           </p>
         </div>
       </div>
@@ -66,7 +66,7 @@
       <div class="col s12 m4">
         <div class="icon-block center">
           <div class="orange-text"><i class="material-icons large">security</i></div>
-          <h3 class="h6-size"><%= t('marketing.landing_page.benefits.ads.title') %></h3>
+          <h3 class="h6-size">No ads, ever</h3>
           <p class="light">
             It kind of feels like Notebook.ai, but paper. There's no ads on the site, why would we add ads to paper?
           </p>
