--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,7 +18,7 @@
   </nav>
   <ul id="worldbuilding-dropdown" class="dropdown-content">
     <li>
-      <%= link_to "https://www.notebook.ai/for/writers", class: 'blue-text' do %>
+      <%= link_to "https://www.notebook.ai/for/writers", class: 'blue-text', style: 'width: 320px' do %>
         <i class="material-icons left">book</i>
         Notebook.ai for writers
       <% end %>
