--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,8 @@
     <%= render 'layouts/navbar' %>
 
     <%= yield :full_width_page_header %>
-    <main>
+    <div class="container">
       <%= yield %>
-    </main>
+    </div>
   </body>
 </html>
