--- a/app/views/paper/templates/_content_page.html.erb
+++ b/app/views/paper/templates/_content_page.html.erb
@@ -1,6 +1,6 @@
 <div class="underlined"></div>
+<i class="material-icons left"><%= icon_for(content_name.titleize) %></i>
 <div class="uppercase grey-text"><%= content_name.titleize %> name</div>
-<i class="material-icons large left">dashboard</i>
 <br /><br />
 
 <%
