--- a/app/assets/stylesheets/pdf.scss
+++ b/app/assets/stylesheets/pdf.scss
@@ -33,11 +33,11 @@ div.nobreak { page-break-inside: avoid; }
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: url('/MaterialIcons-Regular.eot');
+  src: font-url('/MaterialIcons-Regular.eot');
   /* For IE6-8 */
-  src: url('/MaterialIcons-Regular.woff2') format('woff2'), 
-       url('/MaterialIcons-Regular.woff')  format('woff'), 
-       url('/MaterialIcons-Regular.ttf')   format('truetype');
+  src: font-url('/MaterialIcons-Regular.woff2') format('woff2'), 
+       font-url('/MaterialIcons-Regular.woff')  format('woff'), 
+       font-url('/MaterialIcons-Regular.ttf')   format('truetype');
 }
 
 .material-icons {
