Give up on bundling material icons in pdfs

--- a/app/views/paper/templates/_content_page.html.erb
+++ b/app/views/paper/templates/_content_page.html.erb
@@ -1,6 +1,6 @@
+<br /><br />
 <div class="underlined"></div>
-<i class="material-icons left"><%= icon_for(content_name.titleize) %></i>
-<div class="uppercase grey-text"><%= content_name.titleize %> name</div>
+<div class="uppercase center grey-text"><%= content_name.titleize %> name</div>
 <br /><br />
 
 <%
