--- a/app/assets/stylesheets/pdf.scss
+++ b/app/assets/stylesheets/pdf.scss
@@ -28,37 +28,4 @@ div.nobreak { page-break-inside: avoid; }
 .third-page-width      { width: 300px; }
 .half-page-width       { width: 450px; }
 .two-thirds-page-width { width: 600px; }
-
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: font-url('/MaterialIcons-Regular.eot');
-  /* For IE6-8 */
-  src: font-url('/MaterialIcons-Regular.woff2') format('woff2'), 
-       font-url('/MaterialIcons-Regular.woff')  format('woff'), 
-       font-url('/MaterialIcons-Regular.ttf')   format('truetype');
-}
-
-.material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  /* Preferred icon size */
-  display: inline-block;
-  line-height: 1;
-  text-transform: none;
-  letter-spacing: normal;
-  word-wrap: normal;
-  white-space: nowrap;
-  direction: ltr;
-  /* Support for all WebKit browsers. */
-  -webkit-font-smoothing: antialiased;
-  /* Support for Safari and Chrome. */
-  text-rendering: optimizeLegibility;
-  /* Support for Firefox. */
-  -moz-osx-font-smoothing: grayscale;
-  /* Support for IE. */
-  font-feature-settings: 'liga';
-}
+.full-page-width       { width: 100% }
