add open source footer

--- a/app/views/paper/index.html.erb
+++ b/app/views/paper/index.html.erb
@@ -159,4 +159,21 @@
       <% end %>
     </div>
   <% end %>
+
+  <div style="font-size: 1.3rem; text-align: justify;" class="col s12 m10 offset-m1">
+    <h3 style="font-size: 1.3em">Do you want to help make Notebook Paper better?</h3>
+    <p>
+      You're in luck! Just like Notebook.ai itself, Notebook Paper is completely
+      <%= link_to 'open source', 'https://github.com/indentlabs/notebook-paper' %>!
+      This means anyone is able to view the entire source code for free, run the project itself,
+      and/or suggest improvements to Notebook Paper that benefit everyone!
+    </p>
+    <p>
+      Yes, Notebook Paper is a bit of a tongue-in-cheek April Fool's
+      joke<sup class="orange-text tooltipped" data-tooltip="Because Notebook.ai was built to be a paper notebook replacement!">[3]</sup>
+      but worldbuilding templates are no joke. They're a free, easy-to-use, age-old 
+      technique that anyone can use to start creating fictional worlds any time they 
+      want &mdash; and this project is here to stay.
+    </p>
+  </div>
 </div>
