--- a/app/views/paper/index.html.erb
+++ b/app/views/paper/index.html.erb
@@ -173,7 +173,7 @@
       joke<sup class="orange-text tooltipped" data-tooltip="Because Notebook.ai was built to be a paper notebook replacement!">[3]</sup>
       but worldbuilding templates are no joke. They're a free, easy-to-use, age-old 
       technique that anyone can use to start creating fictional worlds any time they 
-      want &mdash; and this project is here to stay.
+      want &mdash; and this project is here to stay!
     </p>
   </div>
 </div>
