fix navbar overlapping on mobile

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,7 +6,7 @@
           <%= link_to 'Notebook Paper', main_app.root_path, class: 'orange-text text-lighten-2 brand-logo', style: 'margin-left: 0.6em' %>
         </li>
       </ul>
-      <ul class="right">
+      <ul class="right hide-on-small-only">
         <li>
           <a class="dropdown-trigger" href="#!" data-target="worldbuilding-dropdown">About<i class="material-icons right">arrow_drop_down</i></a>
         </li>
